force-app/main/default/objects/Quote/fields/Attachment_Required__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachment Required</label>
    <type>Checkbox</type>
</CustomField>