force-app/main/default/objects/Quote/fields/D_lai_de_Livraison__c.field-meta.xml
<CustomField>
    <fullName>D_lai_de_Livraison__c</fullName>
    <formula>TEXT( DEV_DelaisLivraison__c) + &quot; - &quot; +  IF(ISPICKVAL(DEV_DescrDelaisLivraison__c,&apos;01&apos;), $Label.DEV_delaiLivraison01,$Label.DEV_delaiLivraison02)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai de Livraison</label>
    <type>Text</type>
</CustomField>