force-app/main/default/objects/Quote/fields/DEV_Address_Compte_Livre__c.field-meta.xml
<CustomField>
    <fullName>DEV_Address_Compte_Livre__c</fullName>
    <formula>Opportunity.OPP_CompteClientFinal__r.ShippingStreet + &apos;, &apos; + Opportunity.OPP_CompteClientFinal__r.ShippingPostalCode + &apos;, &apos; +Opportunity.OPP_CompteClientFinal__r.ShippingCity+&apos;, &apos;+Opportunity.OPP_CompteClientFinal__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Compte Livré</label>
    <type>Text</type>
</CustomField>