force-app/main/default/objects/Quote/fields/DEV_Ajout_Piece_Jointe__c.field-meta.xml
<CustomField>
    <fullName>DEV_Ajout_Piece_Jointe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ajout_Piece-Jointe</label>
    <type>Checkbox</type>
</CustomField>