force-app/main/default/objects/Quote/fields/DEV_Audit_Accepted_by__c.field-meta.xml
<CustomField>
    <fullName>DEV_Audit_Accepted_by__c</fullName>
    <label>Audit - Accepted by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>