force-app/main/default/objects/Quote/fields/DEV_Audit_Accepted_date__c.field-meta.xml
<CustomField>
    <fullName>DEV_Audit_Accepted_date__c</fullName>
    <label>Audit - Accepted date</label>
    <type>DateTime</type>
</CustomField>