force-app/main/default/objects/Quote/fields/DEV_Charg_daffaire__c.field-meta.xml
<CustomField>
    <fullName>DEV_Charg_daffaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Permet d&apos;indiquer le nom du chargé d&apos;affaire</description>
    <inlineHelpText>Indiquer le nom du chargé d&apos;affaire lorsque vous accepté un Devis</inlineHelpText>
    <label>Chargé d&apos;affaire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Devis1</relationshipName>
    <type>Lookup</type>
</CustomField>