force-app/main/default/objects/Quote/fields/DEV_Code_Client__c.field-meta.xml
<CustomField>
    <fullName>DEV_Code_Client__c</fullName>
    <formula>Opportunity.Account.ACC_ERPIdITA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Client</label>
    <type>Text</type>
</CustomField>