force-app/main/default/objects/Quote/fields/DEV_CommentaireDeRefus__c.field-meta.xml
<CustomField>
    <fullName>DEV_CommentaireDeRefus__c</fullName>
    <label>Commentaire de refus</label>
    <type>TextArea</type>
</CustomField>