force-app/main/default/objects/Quote/fields/DEV_Compte_livre__c.field-meta.xml
<CustomField>
    <fullName>DEV_Compte_livre__c</fullName>
    <formula>Opportunity.OPP_CompteClientFinal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte livré</label>
    <type>Text</type>
</CustomField>