force-app/main/default/objects/Quote/fields/DEV_ContactSuppleant__c.field-meta.xml
<CustomField>
    <fullName>DEV_ContactSuppleant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact suppléant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>