force-app/main/default/objects/Quote/fields/DEV_Date_de_cr_ation__c.field-meta.xml
<CustomField>
    <fullName>DEV_Date_de_cr_ation__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de création (1)</label>
    <type>Date</type>
</CustomField>