force-app/main/default/objects/Quote/fields/DEV_DateDeCreation__c.field-meta.xml
<CustomField>
    <fullName>DEV_DateDeCreation__c</fullName>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>