force-app/main/default/objects/Quote/fields/DEV_DateDeRelance__c.field-meta.xml
<CustomField>
    <fullName>DEV_DateDeRelance__c</fullName>
    <label>Date de relance</label>
    <type>Date</type>
</CustomField>