force-app/main/default/objects/Quote/fields/DEV_DateDeValidation__c.field-meta.xml
<CustomField>
    <fullName>DEV_DateDeValidation__c</fullName>
    <label>Date de validation</label>
    <type>Date</type>
</CustomField>