force-app/main/default/objects/Quote/fields/DEV_DatePrevisionnelleDeTravaux__c.field-meta.xml
<CustomField>
    <fullName>DEV_DatePrevisionnelleDeTravaux__c</fullName>
    <label>Date prévisionnelle de travaux</label>
    <type>Date</type>
</CustomField>