force-app/main/default/objects/Quote/fields/DEV_DatePrevisionnelleMAD__c.field-meta.xml
<CustomField>
    <fullName>DEV_DatePrevisionnelleMAD__c</fullName>
    <label>Date prévisionnelle MAD</label>
    <type>Date</type>
</CustomField>