force-app/main/default/objects/Quote/fields/DEV_DelaisLivraison__c.field-meta.xml
<CustomField>
    <fullName>DEV_DelaisLivraison__c</fullName>
    <inlineHelpText>This field contains the Delivery Terms in weeks. 
Termini di consegna in settimane dalla ricezione dell&apos;ordine o dalla ricezione del pagamento</inlineHelpText>
    <label>Délais Livraison</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>