force-app/main/default/objects/Quote/fields/DEV_DescrDelaisLivraison__c.field-meta.xml
<CustomField>
    <fullName>DEV_DescrDelaisLivraison__c</fullName>
    <label>Descr Délais Livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>semaines à partir de la commande</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>semaines à partir du paiement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>