force-app/main/default/objects/Quote/fields/DEV_Devis_Original__c.field-meta.xml
<CustomField>
    <fullName>DEV_Devis_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis Original</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>