force-app/main/default/objects/Quote/fields/DEV_EntiteBW__c.field-meta.xml
<CustomField>
    <fullName>DEV_EntiteBW__c</fullName>
    <formula>TEXT( CreatedBy.USER_EntiteBW__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EntiteBW</label>
    <type>Text</type>
</CustomField>