force-app/main/default/objects/Quote/fields/DEV_INCOTERMS__c.field-meta.xml
<CustomField>
    <fullName>DEV_INCOTERMS__c</fullName>
    <description>Internation Standard INCOTERMS defining Shipping Terms</description>
    <label>INCOTERMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW</fullName>
                <label>EXW - EX WORKS</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>FCA - FREE CARRIER</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>FAS - FREE ALONGSIDE SHIP</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>FOB - FREE ON BOARD</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>CPT - CARRIAGE PAID TO</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>CIP - CARRIAGE AND INSURANCE PAID TO</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <label>CFR - COST AND FREIGHT</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>CIF - COST, INSURANCE AND FREIGHT</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>DAP- DELIVERED AT PLACE</label>
            </value>
            <value>
                <fullName>DPU</fullName>
                <label>DPU - DELIVERED AT PLACE UNLOADED</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>DDP - DELIVERED DUTY PAID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>