force-app/main/default/objects/Quote/fields/DEV_Langue_doc_du_compte__c.field-meta.xml
<CustomField>
    <fullName>DEV_Langue_doc_du_compte__c</fullName>
    <formula>TEXT( Opportunity.Account.ACC_Langue_Documentation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Langue doc du compte</label>
    <type>Text</type>
</CustomField>