force-app/main/default/objects/Quote/fields/DEV_Montant__c.field-meta.xml
<CustomField>
    <fullName>DEV_Montant__c</fullName>
    <label>Montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>