force-app/main/default/objects/Quote/fields/DEV_MotifDeRefus__c.field-meta.xml
<CustomField>
    <fullName>DEV_MotifDeRefus__c</fullName>
    <label>Motif de refus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Specifications</fullName>
                <label>Spécifications</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>