force-app/main/default/objects/Quote/fields/DEV_NombreLignesDeDevis__c.field-meta.xml
<CustomField>
    <fullName>DEV_NombreLignesDeDevis__c</fullName>
    <label>Nombre de lignes de devis</label>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>