force-app/main/default/objects/Quote/fields/DEV_NumCommandeClient__c.field-meta.xml
<CustomField>
    <fullName>DEV_NumCommandeClient__c</fullName>
    <label>N° Commande du client</label>
    <length>250</length>
    <type>Text</type>
</CustomField>