force-app/main/default/objects/Quote/fields/DEV_NumVersionGPIC__c.field-meta.xml
<CustomField>
    <fullName>DEV_NumVersionGPIC__c</fullName>
    <label>N° Version GPIC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>