force-app/main/default/objects/Quote/fields/DEV_Prix_total__c.field-meta.xml
<CustomField>
    <fullName>DEV_Prix_total__c</fullName>
    <formula>Text( TotalPrice ) + &quot;   &quot; + &quot;  Euro&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total</label>
    <type>Text</type>
</CustomField>