force-app/main/default/objects/Quote/fields/DEV_RedacteurDeLOffre__c.field-meta.xml
<CustomField>
    <fullName>DEV_RedacteurDeLOffre__c</fullName>
    <label>Rédacteur de l&apos;offre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>