force-app/main/default/objects/Quote/fields/DEV_RemiseClient__c.field-meta.xml
<CustomField>
    <fullName>DEV_RemiseClient__c</fullName>
    <formula>$Label.Remise_chauffage &amp; &quot; &quot; &amp;  TEXT((Opportunity.Account.ACC_RemiseChauffage__c*100))&amp;&quot;%&quot;
&amp;
BR()
&amp;
$Label.Remise_pieces &amp;&quot; &quot; &amp;  TEXT((Opportunity.Account.ACC_RemisePieces__c*100))&amp;&quot;%&quot;
&amp;
BR()
&amp;
$Label.Remise_produit_de_conditionnement &amp;&quot; &quot; &amp; TEXT((Opportunity.Account.ACC_RemiseTraitementDeLEau__c*100))&amp;&quot;%&quot;
&amp;
BR()
&amp;
$Label.Remise_mat_riel_traitement_de_l_eau_standard &amp;&quot; &quot; &amp; TEXT((Opportunity.Account.ACC_RemiseTraitementEauStandard__c*100))&amp;&quot;%&quot;</formula>
    <label>Remises client prévues</label>
    <type>Text</type>
</CustomField>