force-app/main/default/objects/Quote/fields/DEV_Salutation_Contact__c.field-meta.xml
<CustomField>
    <fullName>DEV_Salutation_Contact__c</fullName>
    <formula>Text(Contact.Salutation) + &apos; &apos; + Contact.FirstName +&apos; &apos; + Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salutation Contact</label>
    <type>Text</type>
</CustomField>