force-app/main/default/objects/Quote/fields/DEV_Tech_QuoteNumber_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>DEV_Tech_QuoteNumber_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Devis</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>