force-app/main/default/objects/Quote/fields/DEV_Tel_Propri_taire__c.field-meta.xml
<CustomField>
    <fullName>DEV_Tel_Propri_taire__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tél Propriétaire</label>
    <type>Text</type>
</CustomField>