force-app/main/default/objects/Quote/fields/DEV_Termes_Expedition__c.field-meta.xml
<CustomField>
    <fullName>DEV_Termes_Expedition__c</fullName>
    <description>This field defines shipment terms</description>
    <label>Termes Expedition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Par notre soin</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Par votre soin</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Par courier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>