force-app/main/default/objects/Quote/fields/DEV_Type__c.field-meta.xml
<CustomField>
    <fullName>DEV_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Equipement</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Travaux</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Equipement + Travaux</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>