force-app/main/default/objects/Quote/fields/DEV_TypeDeDevis__c.field-meta.xml
<CustomField>
    <fullName>DEV_TypeDeDevis__c</fullName>
    <label>Type de devis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Devis SF</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Devis ERP</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Devis Hors-Système</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>