force-app/main/default/objects/Quote/fields/DEVDate_de_creation__c.field-meta.xml
<CustomField>
    <fullName>DEVDate_de_creation__c</fullName>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>