force-app/main/default/objects/Quote/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <label>Main Product</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ELD_MainProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>