force-app/main/default/objects/Quote/fields/Montant_TVA__c.field-meta.xml
<CustomField>
    <fullName>Montant_TVA__c</fullName>
    <formula>DEV_Montant__c * Pourcentage_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>