force-app/main/default/objects/Quote/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <formula>TEXT(Opportunity.OPP_Tech_Nature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature</label>
    <type>Text</type>
</CustomField>