force-app/main/default/objects/Quote/fields/OPP_Origine__c.field-meta.xml
<CustomField>
    <fullName>OPP_Origine__c</fullName>
    <label>Origine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposition Commerciale</fullName>
            </value>
            <value>
                <fullName>Intervention Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>