force-app/main/default/objects/Quote/fields/Original_Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Version__c</fullName>
    <description>This is the first Quote created on the Opportunity</description>
    <formula>DEV_Tech_QuoteNumber_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the first Quote created on the Opportunity</inlineHelpText>
    <label>Original Quote Version</label>
    <type>Text</type>
</CustomField>