force-app/main/default/objects/Quote/fields/Pourcentage_TVA__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_TVA__c</fullName>
    <description>Indique le pourcentage de la TVA selon le pays concerné.</description>
    <inlineHelpText>Ce champ est alimenté automatiquement en fonction du &quot;Type de TVA&quot; de l&apos;opportunité.</inlineHelpText>
    <label>TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>