force-app/main/default/objects/Quote/fields/PrixTTC__c.field-meta.xml
<CustomField>
    <fullName>PrixTTC__c</fullName>
    <formula>DEV_Montant__c + Montant_TVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>