force-app/main/default/objects/Quote/fields/Proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Proprietaire__c</fullName>
    <formula>Owner:User.FirstName+&apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietaire</label>
    <type>Text</type>
</CustomField>