force-app/main/default/objects/Quote/fields/Quote_Number_Revision__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number_Revision__c</fullName>
    <inlineHelpText>ce champ concerne uniquement les utilisateurs italiens</inlineHelpText>
    <label>Quote Num-Rev</label>
    <length>30</length>
    <type>Text</type>
</CustomField>