force-app/main/default/objects/Quote/fields/Tech_AccountID__c.field-meta.xml
<CustomField>
    <fullName>Tech_AccountID__c</fullName>
    <formula>Opportunity.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_AccountID</label>
    <type>Text</type>
</CustomField>