force-app/main/default/objects/Quote/fields/TECH_DEV_NumCommandeLiee__c.field-meta.xml
<CustomField>
    <fullName>TECH_DEV_NumCommandeLiee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TECH_DEV_NumCommandeLiee</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>