force-app/main/default/objects/Quote/fields/TECH_DEVIS_IMP_COMPTEUR__c.field-meta.xml
<CustomField>
    <fullName>TECH_DEVIS_IMP_COMPTEUR__c</fullName>
    <label>TECH_DEVIS_IMP_COMPTEUR</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>