force-app/main/default/objects/Quote/fields/TECH_DEVIS_IMP_PDF_DEMANDEE__c.field-meta.xml
<CustomField>
    <fullName>TECH_DEVIS_IMP_PDF_DEMANDEE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_DEVIS_IMP_PDF_DEMANDEE</label>
    <type>Checkbox</type>
</CustomField>