force-app/main/default/objects/Quote/fields/Tech_produitPrincipal__c.field-meta.xml
<CustomField>
    <fullName>Tech_produitPrincipal__c</fullName>
    <label>Tech_produitPrincipal</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ELD_MainProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>