force-app/main/default/objects/Quote/fields/Tech_Talend_Export_Devis__c.field-meta.xml
<CustomField>
    <fullName>Tech_Talend_Export_Devis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cette case est cochée &gt;&gt; Export vers Talend</description>
    <label>Tech_Talend_Export_Devis</label>
    <type>Checkbox</type>
</CustomField>