force-app/main/default/objects/Quote/fields/Tech_TalendHistorique__c.field-meta.xml
<CustomField>
    <fullName>Tech_TalendHistorique__c</fullName>
    <label>Tech_TalendHistorique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>