force-app/main/default/objects/Quote/fields/Utilisateur__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rédacteur de l&apos;offre</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>