force-app/main/default/objects/Quote/validationRules/Description_maximum_840.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_maximum_840</fullName>
    <active>true</active>
    <description>This rule limit the description field to 840 characters</description>
    <errorConditionFormula>Len( Description) &gt; 840</errorConditionFormula>
    <errorMessage>You have exceeded the number of allowed Characters in Description. Maximum allowed is 840.
Ha superato il numero di caratteri consentiti nel campo Descrizione. Il massimo consentito è 840.</errorMessage>
</ValidationRule>