force-app/main/default/objects/Quote/validationRules/VR01_DEV_MotifDeRefusObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_DEV_MotifDeRefusObligatoire</fullName>
    <active>true</active>
    <description>Cette règle de validation oblige l&apos;utilisateur à insérer un motif de refus lorsqu&apos;il qualifie un devis de &quot;refusé&quot;.</description>
    <errorConditionFormula>AND( 
$User.USER_ByPassRegleValidation__c = FALSE, 
ISPICKVAL(Status, &apos;4&apos;), 
OR( 
ISPICKVAL( DEV_MotifDeRefus__c, &quot;&quot;), 
ISBLANK(DEV_CommentaireDeRefus__c )))</errorConditionFormula>
    <errorMessage>Merci de renseigner un motif de refus et un commentaire de refus, lorsque vous qualifiez votre devis de &quot;refusé&quot;.</errorMessage>
</ValidationRule>