force-app/main/default/objects/Quote/validationRules/VR02_DEV_NumCommandeObligatoireAccepte.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_DEV_NumCommandeObligatoireAccepte</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.USER_ByPassRegleValidation__c = FALSE,  
OR(ISPICKVAL(DEV_TypeDeDevis__c, &apos;1&apos;), ISPICKVAL(DEV_TypeDeDevis__c, &apos;3&apos;)), 
ISBLANK( DEV_NumCommandeClient__c), 
ISPICKVAL( Status, &apos;3&apos;))</errorConditionFormula>
    <errorMessage>Merci de renseigner le N° de commande client (au niveau du Devis associé) avant de passer le devis en &quot;Accepté&quot;</errorMessage>
</ValidationRule>