force-app/main/default/objects/Quote/validationRules/VR04_DEV_PasDeNouveauDevisSurOppGagnee.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_DEV_PasDeNouveauDevisSurOppGagnee</fullName>
    <active>false</active>
    <description>Cette règle permet de bloquer la création d&apos;un devis sur une opportunité au statut &quot;Fermée-Gagnée&quot;</description>
    <errorConditionFormula>AND(NOT(ISCHANGED( TECH_DEV_NumCommandeLiee__c )),
				$User.USER_ByPassRegleValidation__c = FALSE ,
 Opportunity.IsWon = TRUE)</errorConditionFormula>
    <errorMessage>Attention, vous ne pouvez pas créer de nouveau devis sur une opportunité gagnée.</errorMessage>
</ValidationRule>