force-app/main/default/objects/Quote/validationRules/VR07_PasDeModifDevisGPIC.validationRule-meta.xml
<ValidationRule>
    <fullName>VR07_PasDeModifDevisGPIC</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.USER_ByPassRegleValidation__c = FALSE, 
$User.LastName != $Label.API, ISPICKVAL( DEV_TypeDeDevis__c,&quot;2&quot;))</errorConditionFormula>
    <errorMessage>Vous n&apos;êtes pas autorisés à créer/modifier un devis GPIC</errorMessage>
</ValidationRule>