force-app/main/default/objects/Quote/validationRules/VR11_DEV_ModificationDevis.validationRule-meta.xml
<ValidationRule>
    <fullName>VR11_DEV_ModificationDevis</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.USER_ByPassRegleValidation__c = FALSE, $User.LastName!=&apos;API&apos;, 
TEXT(Opportunity.Account.ACC_Entite_BW__c ) == $Label.BW_ITA,
TEXT( Status ) ==  $Label.Accepte,
NOT(ISCHANGED(Status ) 
))</errorConditionFormula>
    <errorMessage>Vous n&apos;êtes pas autorisés à créer/modifier un devis accepté.</errorMessage>
</ValidationRule>