force-app/main/default/objects/Quote/validationRules/VR13_DEV_BlocageSiScteurCommercialVide.validationRule-meta.xml
<ValidationRule>
    <fullName>VR13_DEV_BlocageSiScteurCommercialVide</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.USER_ByPassRegleValidation__c = FALSE,
TEXT(Opportunity.Account.ACC_Entite_BW__c ) == $Label.BW_ITA,
OR(ISBLANK(TEXT(Opportunity.Account.ACC_SecteurCommercial__c )), ISBLANK(TEXT(Opportunity.Account.ACC_Region__c ))),
ISCHANGED(Status ) ,
TEXT( Status ) == $Label.Accepte
)</errorConditionFormula>
    <errorMessage>Please complete fields Regional Agency and Commercial Sector in the Account page before sending an Accepted Quote to the AS400</errorMessage>
</ValidationRule>