force-app/main/default/objects/Quote/validationRules/VR14_DEV_NumeroDevisNonModifiable_Italie.validationRule-meta.xml
<ValidationRule>
    <fullName>VR14_DEV_NumeroDevisNonModifiable_Italie</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.USER_ByPassRegleValidation__c = FALSE,$User.LastName!=&apos;API&apos;,
TEXT(Opportunity.Account.ACC_Entite_BW__c ) == $Label.BW_ITA,
ISCHANGED( DEV_Tech_QuoteNumber_ExternalId__c )
)</errorConditionFormula>
    <errorMessage>It is not allowed to modify the &apos;Quote Number&apos; .</errorMessage>
</ValidationRule>